--- a/templates/webstorm.desktop.j2
+++ b/templates/webstorm.desktop.j2
@@ -2,7 +2,7 @@
 Version=1.0
 Type=Application
 Name=WebStorm {{ webstorm_version }}
-Icon={{ webstorm_location}}/bin/webstorm.png
+Icon={{ webstorm_location}}/bin/webstorm.svg
 Exec="{{ webstorm_location }}/bin/webstorm.sh" %f
 Comment=Develop with pleasure!
 Categories=Development;IDE;
